--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-1 px-lg-5">
-                <a class="navbar-brand" href="#!"><div class="d-flex"><img src="ecommerce_logo.png" alt="Logo" width="90" height="80"/><span class="fw-bold d-flex align-items-center">StackBuy</span></div></a>
+                <a class="navbar-brand" href="#!"><div class="d-flex"><img src="image/ecommerce_logo.png" alt="Logo" width="90" height="80"/><span class="fw-bold d-flex align-items-center">StackBuy</span></div></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4 gap-4">
